--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,174 @@
-numpy==1.19.5
-matplotlib==3.4.2
-scikit-image==0.18.2
-scipy==1.3.2
-packaging==0.21
-jupyterlab==3.0.16
-scikit-learn==1.0.0
-joblib==1.1.1
-threadpoolctl==2.0.0
+absl-py==2.0.0
+anyio==4.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+attrs==23.1.0
+Babel==2.13.0
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bleach==6.0.0
+Brotli==1.1.0
+cachetools==5.3.2
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+comm==0.2.1
+contourpy==1.1.1
+cycler==0.12.0
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+executing==2.0.1
+fastjsonschema==2.18.1
+filelock==3.13.1
+flatbuffers==23.5.26
+fonttools==4.43.0
+fqdn==1.5.1
+fsspec==2023.12.0
+gast==0.5.4
+gensim==4.3.2
+google-auth==2.24.0
+google-auth-oauthlib==1.1.0
+google-pasta==0.2.0
+grpcio==1.59.3
+h5py==3.10.0
+huggingface-hub==0.19.4
+idna==3.4
+imageio==2.33.1
+ipykernel==6.29.3
+ipython==8.22.2
+ipywidgets==8.1.1
+isoduration==20.11.0
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.1
+jsonschema-specifications==2023.7.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.6
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.9
+jupyterlab_server==2.25.0
+keras==2.15.0
+kiwisolver==1.4.5
+lazy_loader==0.3
+libclang==16.0.6
+Markdown==3.5.1
+MarkupSafe==2.1.3
+matplotlib==3.8.0
+matplotlib-inline==0.1.6
+mistune==3.0.2
+ml-dtypes==0.2.0
+mpmath==1.3.0
+mutagen==1.47.0
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.6.0
+networkx==3.2.1
+nltk==3.8.1
+notebook==7.0.6
+notebook_shim==0.2.3
+numpy==1.26.0
+oauthlib==3.2.2
+opt-einsum==3.3.0
+overrides==7.4.0
+packaging==23.2
+panda==0.3.1
+pandas==2.1.4
+pandocfilters==1.5.0
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==10.0.1
+platformdirs==4.2.0
+plotly==5.18.0
+prometheus-client==0.17.1
+prompt-toolkit==3.0.43
+protobuf==4.23.4
+psutil==5.9.8
+pure-eval==0.2.2
+pyasn1==0.5.1
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycryptodomex==3.19.0
+Pygments==2.17.2
+pyparsing==3.1.1
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+pytz==2023.3.post1
+pywin32==306
+pywinpty==2.0.11
+PyYAML==6.0.1
+pyzmq==25.1.2
+qtconsole==5.5.1
+QtPy==2.4.1
+referencing==0.30.2
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rpds-py==0.10.3
+rsa==4.9
+safetensors==0.4.1
+scikit-image==0.22.0
+scikit-learn==1.3.1
+scipy==1.11.3
+seaborn==0.13.0
+Send2Trash==1.8.2
+six==1.16.0
+smart-open==6.4.0
+sniffio==1.3.0
+soupsieve==2.5
+stack-data==0.6.3
+sympy==1.12
+tenacity==8.2.3
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+tensorflow==2.15.0
+tensorflow-estimator==2.15.0
+tensorflow-intel==2.15.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.4.0
+terminado==0.17.1
+threadpoolctl==3.2.0
+tifffile==2023.12.9
+tinycss2==1.2.1
+tokenizers==0.15.0
+torch==2.1.1
+torchaudio==2.1.1
+torchvision==0.16.1
+tornado==6.4
+tqdm==4.66.1
+traitlets==5.14.1
+transformers==4.35.2
+types-python-dateutil==2.8.19.14
+typing_extensions==4.8.0
+tzdata==2023.3
+uri-template==1.3.0
+urllib3==2.0.7
+wcwidth==0.2.13
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.3
+websockets==12.0
+Werkzeug==3.0.1
+widgetsnbextension==4.0.9
+wrapt==1.14.1
+xgboost==2.0.2
+yt-dlp @ https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz#sha256=edce29ce4d45890af83db6b0fa6d212c5156dffcf1e20e4bc6828e5b57871d84
